<resources>
    <string name="app_name">Keep Deals</string>
    <string name="new_card">New card</string>
    <string name="card_name">Card name</string>
    <string name="card_description">Card description</string>
    <string name="expiration_date">Exp. Date</string>
    <string name="take_photo">Take photo</string>
    <string name="where_to_use">Where to use</string>
    <string name="add_card">Add card</string>
    <string name="none" translatable="false" />
    <string name="back">Back</string>
    <string name="photo">Photo</string>
    <string name="are_you_sure">Remove card?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="missing_permissions">Missing Permissions</string>
    <string name="pay_attention">Pay attention</string>
    <string name="saved_card_without_photo">Save card without photo?</string>
    <string name="yes">Yes</string>
    <string name="save_your_cards_tickets_coupons"><![CDATA[Save your Cards, Tickets & Coupons]]></string>
</resources>
