<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/ivAddDelivery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:srcCompat="@drawable/ic_add_white_24dp"
            android:contentDescription="@string/none" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="11">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDelivery"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/save_your_cards_tickets_coupons"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>